# UInt32ParseSortCuda

./: CMakeLists.txt  LICENSE  TaskGeneratorAPI.h  kalnytskyi_solution.cpp  sort.cu  sort.cuh
